--- a/main.css
+++ b/main.css
@@ -4,4 +4,27 @@
   body {
     background-color: black;
     font-size: 24px;
+    color: white;
+ 
+  
+    
+  }
+
+  section {
+  background-color: grey;
+  display: block;
+ 
+  
+  padding: 10px;
+  margin: 5px;
+
+  
+  }
+
+  .h2 {
+    font-size: 26px;
+  }
+
+  header {
+    text-align: center;
   }
