--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
   }
   body {
-    background-color: black;
+    background-image: url("https://images.pexels.com/photos/956981/milky-way-starry-sky-night-sky-star-956981.jpeg?cs=srgb&dl=astrology-astronomy-background-image-956981.jpg&fm=jpg");
     font-size: 24px;
     color: white;
  
@@ -11,20 +11,56 @@
   }
 
   section {
-  background-color: grey;
-  display: block;
- 
+  background-color: black;
+  width: 33%;
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  justify-content: space-between;
+  padding: 20px;
+  border-width: 15px solid darkblue;
   
-  padding: 10px;
-  margin: 5px;
-
-  
+    
   }
 
+
+
   .h2 {
+    
     font-size: 26px;
+    
   }
 
   header {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: space-between;
+
+  }
+
+  .questions,  .nextQuestions{
+    height: 400px;
+  }
+
+
+  .answers {
+    height: 400px;
+    visibility: hidden;
+  }
+
+  .progress{
+    visibility: hidden;
+  }
+
+  .status {
+    visibility: hidden;
   }
