--- a/main.css
+++ b/main.css
@@ -19,48 +19,70 @@
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
-  justify-content: space-between;
+  text-align: left;
+  justify-content: space-evenly;
   padding: 20px;
-  border-width: 15px solid darkblue;
-  
-    
-  }
-
-
-
-  .h2 {
-    
-    font-size: 26px;
-    
+  border-width: 15px solid darkblue;   
   }
 
   header {
-    text-align: center;
+    width: 50%;
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: space-bewteen;
+  }
+
+
+  header > img {
+  width: 20%;
+  height: 100px;
+  align-items: center;  
+  margin: 10px;
+  background: linear-gradient(90deg, rgba(22,34,37,1) 0%, rgba(221,220,226,1) 50%, rgba(22,34,37,1) 100%); 
+}
+
+ #quiz-title {
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+  .offer-to-start-quiz{
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .questions {
+    display: block;
+    align-items: left;
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
+
+.verify, .next {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
-    margin-right: auto;
-    margin-left: auto;
-    justify-content: space-between;
+    width: 100%; 
+  } 
 
-  }
 
-  .questions,  .nextQuestions{
-    height: 400px;
-  }
-
+  .progress {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: rgba(37, 40, 73, 0.397);
+    padding: 5px;
+    margin: 5px;
+  } 
 
   .answers {
-    height: 400px;
-    visibility: hidden;
+    background-color: #364570;
   }
 
-  .progress{
-    visibility: hidden;
-  }
-
-  .status {
-    visibility: hidden;
-  }
+  
