--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
     background-color: white;
     font-size: 24px;
     color: white;
-    background: url();
+    background-image: none;
   }
 
   section {
