--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@
     
   }
 
-  .questions {
+  .questions, .next-question{
     display: block;
     align-items: left;
     
@@ -66,7 +66,7 @@
     
   }
 
-#verify, .next {
+#verify, #next, #final {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -93,6 +93,8 @@
 
   .answers {
     background-color: #364570;
+    width: 100%;
+    text-align: center;
   }
 
   /*media sizing full screen
