--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@
     
   }
 
-#verify, #next, #final {
+ #verify, #next, #final {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -90,6 +90,20 @@
   ul {
     list-style: none;
   }
+
+  
+a:link {
+  color: white;
+  text-emphasis: bold;
+}
+
+a:visited{
+  color: greenyellow;
+}
+
+a:hover {
+  color: gold;
+}
 
   .answers {
     background-color: #364570;
