--- a/main.css
+++ b/main.css
@@ -9,10 +9,10 @@
   
     
   }
-
+/*baseline media sizing, mobile first */
   section {
   background-color: rgba(9, 11, 29, 0.651);
-  width: 33%;
+  width: 90%;
   display: flex;
   flex-direction:column;
   align-items: center;
@@ -32,16 +32,20 @@
     justify-content: center;
     margin-right: auto;
     margin-left: auto;
-    justify-content: space-bewteen;
+    /*justify-content: space-bewteen;*/
+    
   }
 
 
   header > img {
-  width: 20%;
-  height: 100px;
+  max-width: 100px;
+  max-height: 100px;
   align-items: center;  
   margin: 10px;
   background: linear-gradient(90deg, rgba(22,34,37,1) 0%, rgba(221,220,226,1) 50%, rgba(22,34,37,1) 100%); 
+  height: auto;
+  width: auto;
+  flex-shrink: 1;
 }
 
  #quiz-title {
@@ -113,13 +117,17 @@ a:hover {
     padding-bottom:none;
   }
 
-  /*media sizing full screen
+  
+@media screen and (min-width: 500px){
+  /*sizing tablets small laptops*/
+section, .questions, .next-question {
+  width: 60%; 
+}
+}
+
+@media screen and (min-width: 800px){
+  /*sizing tablets and desktop*/
+section, .questions, .next-question {
   width: 33%; 
-
-  media sizing table
-  width: 50%;
-
-  phone
-  width: 90%;
-
-  */
+}
+}
